<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".OrderEntryFragment">


        <LinearLayout
            style="@style/Widget.Shrine.Backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="88dp">

            <include layout="@layout/shr_backdrop" />
        </LinearLayout>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/app_bar"
                style="@style/Widget.Shrine.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:paddingStart="12dp"
                android:paddingLeft="12dp"
                android:paddingEnd="12dp"
                android:paddingRight="12dp"
                app:contentInsetStart="0dp"
                app:navigationIcon="@drawable/shr_branded_menu"
                app:title="@string/shr_app_name" />
        </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/product_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@color/productGridBackgroundColor"
        android:elevation="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/productGridBackgroundColor"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_entry_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/shr_order_number"
                android:textAppearance="?attr/textAppearanceBody1" />

            <TextView
                android:id="@+id/order_entry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/shr_order_date"
                android:textAppearance="?attr/textAppearanceBody1" />

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:elevation="0dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shr_drawable_selector"
                android:padding="8dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center">
                    <com.android.volley.toolbox.NetworkImageView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_marginTop="24dp"
                        android:id="@+id/order_entry_image"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cancelled"
                        android:visibility="invisible"
                        android:src="@drawable/cancelled"/>

                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shr_product_title"
                    android:layout_marginTop="16dp"
                    android:id="@+id/order_entry_title"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="?attr/textAppearanceHeadline5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shr_order_brand"
                    android:id="@+id/order_entry_brand"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="?attr/textAppearanceHeadline5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shr_order_price"
                    android:id="@+id/order_entry_price"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="?attr/textAppearanceHeadline6"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shr_order_status"
                    android:id="@+id/order_entry_status"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:textAppearance="?attr/textAppearanceBody1"/>

                <TextView
                    android:id="@+id/order_entry_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/shr_order_location"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <TextView
                    android:id="@+id/order_entry_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/shr_order_delivery"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <TextView
                    android:id="@+id/order_entry_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/shr_order_return"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <TextView
                    android:id="@+id/order_entry_pickup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/shr_order_pickup"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <android.support.design.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancel_button"
                    style="@style/Widget.Shrine.Button"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/cancel"/>
            </LinearLayout>
        </android.support.design.card.MaterialCardView>
        </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
    </FrameLayout>