<?xml version="1.0" encoding="utf-8"?>
<android.support.design.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp"
    android:layout_marginTop="4dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="horizontal">
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/order_image"
            android:layout_width="160dp"
            android:layout_height="140dp"
            android:background="?attr/colorPrimaryDark"
            android:scaleType="centerCrop" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:layout_weight="3"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shr_product_title"
                android:id="@+id/order_title"
                android:textAppearance="?attr/textAppearanceHeadline6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/shr_order_brand"
                android:id="@+id/order_brand"
                android:textAppearance="?attr/textAppearanceBody2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/shr_order_price"
                android:id="@+id/order_price"
                android:textAppearance="?attr/textAppearanceBody2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/shr_order_status"
                android:id="@+id/order_status"
                android:textAppearance="?attr/textAppearanceBody2"/>
        </LinearLayout>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginRight="2dp"
            app:srcCompat="@drawable/outline_arrow_forward_24"/>
    </LinearLayout>

</android.support.design.card.MaterialCardView>